[roborock] Code Improvements/modernisation (#20954)
* Code Improvements

Signed-off-by: Paul Smedley <paul@smedley.id.au>